# homebrew-pandafilter

./: .gitignore  .mcp.json  Cargo.toml  PLAN2.md  README.md  SECURITY.md  install.sh
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: ccr.rb  pandafilter.rb
ccr/: Cargo.toml
ccr-core/: Cargo.toml
ccr-core/src/: analytics.rs  config.rs  embed_client.rs  global_rules.rs  jsonlog.rs  lib.rs  ndjson.rs  ov_embed.rs  patterns.rs  pipeline.rs  stacktrace.rs  summarizer.rs  zoom.rs
ccr-core/src/focus/: assembler.rs  graph.rs  indexer.rs  mod.rs  query.rs  symbols.rs
ccr-core/tests/: npu_fallback.rs  npu_smoke.rs  pattern_filters.rs  zoom_blocks.rs
ccr-eval/: Cargo.toml
ccr-eval/src/: bench.rs  bench_report.rs  main.rs  runner.rs
ccr-sdk/: Cargo.toml
ccr-sdk/src/: compressor.rs  deduplicator.rs
ccr/src/: analytics_db.rs  config_loader.rs  hook.rs  integrity.rs  lib.rs  main.rs  noise_learner.rs  pre_cache.rs  result_cache.rs  session.rs  user_filters.rs  util.rs  zoom_store.rs
ccr/src/agents/: cline.rs  codex.rs  copilot.rs  gemini.rs  (+2 more)
ccr/tests/: cursor_init.rs  elastic_context.rs  handler_benchmarks.rs  idea3_delta.rs  idea7_historical_centroid.rs  integration_filter.rs  integration_gain.rs  integration_hook.rs  integration_new_features.rs  result_cache_hook.rs  semantic_state_map.rs
config/: default_filters.toml
docker/: Dockerfile  Dockerfile.ci  docker-compose.yml  test.sh
docker/fixtures/: legacy_analytics.jsonl
docs/: index.html  package-lock.json  package.json  vite.config.ts
docs/src/: App.tsx  index.css
scripts/: release.sh
(+38 files in other folders)
