[workspace]
resolver = "2"
members = ["ccr-core", "ccr", "ccr-sdk", "ccr-eval"]

[workspace.package]
license = "MIT"

[workspace.dependencies]
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
anyhow      = "1"
thiserror   = "2"
clap        = { version = "4", features = ["derive"] }
owo-colors  = { version = "4", features = ["supports-colors"] }
tiktoken-rs = "0.6"
sha2        = "0.10"
hex         = "0.4"
rusqlite    = { version = "0.31", features = ["bundled"] }
