[package]
name = "panda-eval"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "panda-eval"
path = "src/main.rs"

[dependencies]
panda-core = { path = "../ccr-core" }
panda-sdk  = { path = "../ccr-sdk" }
panda      = { path = "../ccr" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
