[package]
name = "panda-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
panda-core = { path = "../ccr-core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
